# ffi_jboss_rust_lib

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/lib/: initial.rs  lib.rs  login.rs  logout.rs  register_device.rs  search.rs  select_person.rs
