[package]
name = "ffi_jboss_rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = [
    "blocking",
    "cookies",
    "native-tls",
] }

chrono = "0.4.19"
select = "0.5.0"
lazy_static = "1.4.0"

serde_json = { version = "1.0.66" }
serde = { version = "1.0.127", features = ["derive"] }

[lib]
crate-type = ["rlib", "dylib"]
name = "jboss"
path = "src/lib.rs"

[[bin]]
name = "ffi_tester"
path = "src/main.rs"
